# trillium-send-file

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: lib.rs
