[package]
name = "trillium-send-file"
version = "0.1.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"
description = "send file for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/prabirshrestha/trillium-send-file"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[features]
async-std = ["async_std_crate"]
default = []
smol = ["async-fs"]

[dependencies]
async-fs = { version = "1.6.0", optional = true }
cfg-if = "1.0.0"
futures-lite = "2.3.0"
log = "0.4.17"
trillium = "0.2.8"
mime_guess = "2.0.4"

[dependencies.async_std_crate]
optional = true
package = "async-std"
version = "1.12.0"

[dev-dependencies]
trillium-send-file = { path = ".", features = ["smol"] }
trillium-smol = "0.2.1"
trillium-testing = { version = "0.4.2", features = ["smol"] }
